--- a/client/src/modules/components/Modal/Modal.scss
+++ b/client/src/modules/components/Modal/Modal.scss
@@ -56,7 +56,7 @@ $modal-padding-h: 20px;
 }
 
 .Modal__content-container--max {
-  min-height: 95%;
+  height: 95%;
   width: 95%;
 }
 
